--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,11 @@
   applications:
   - name: onlinecourse
     routes:
-      - route: host.domain
+      - route: tibo2022.mybluemix.net
     memory: 128M
     buildpack: python_buildpack
   - name: onlinecourse-nginx
     routes:
-      - route: host.domain/static
+      - route: tibo2022.mybluemix.net/static
     memory: 128M
     buildpack: staticfile_buildpack
