final version, modification on two templates, and map Question to Course, not Lesson

--- a/manifest.yml
+++ b/manifest.yml
@@ -6,7 +6,7 @@
     buildpack: python_buildpack
   - name: onlinecourse-nginx
     routes:
-      - route: zyc.mybluemix.net/static
+      - route: zyc.mybluemix.net
     memory: 128M
     buildpack: staticfile_buildpack
 
