--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ jinja2==3.0
 gunicorn==20.1.0
 contextvars
 typing-extensions==4.1.1
-aiohttp==3.8.1
+aiohttp
 click==8.0.4
 wheel==0.37.1
 multidict==4.5
